--- a/Meu Site/bio.html
+++ b/Meu Site/bio.html
@@ -29,7 +29,9 @@
      target="blanck">Apple</a>, <a href="https://www.itau.com.br/" target="blanck">Itau</a> e
      <a href="https://www.amazon.com.br/" target="blanck">Amazon</a>
     </p>
-     
-    
+     <h4>Minhas redes sociais</h3>
+     <a id="redessociais" target="blanck" href="https://www.twitter.com"><img src="imagens/60580.png" height="80px" width="80px"> </a>
+     <a id="redessociais" target="blanck" href="https://www.linkedin.com"><img src="imagens/61109.png" height="80px" width="80px"> </a>
+     <a id="redessociais" target="blanck" href="https://www.facebook.com"><img src="imagens/facebookicon.png" height="80px" width="80px"> </a>
 </body>
 </html>
