--- a/Meu Site/bio.html
+++ b/Meu Site/bio.html
@@ -53,7 +53,7 @@
         <a id="redessociais" target="blanck" href="https://www.facebook.com"><img src="imagens/facebookicon.png"
                 height="50px" width="50px"> </a>
         <a id="redessociais" target="blanck" href="mailto:guilherme.dantas@ifsp.edu.br"><img
-                src="/imagens/emailicon.png " height="50px" width="50px"></a>
+                src="imagens/emailicon.png " height="50px" width="50px"></a>
 </body>
 
 </html>
