atualizações da atividade 3
alterações: cor de fundo, cor das barras
adicionando index.hmtl (página principal com menu para todas as paginas)
contato.html (página com icone e link para as redes sociais e email)

--- a/Meu Site/bio.html
+++ b/Meu Site/bio.html
@@ -15,15 +15,10 @@
     <aside>
         <nav id="menu">
             <ul id="menu2">
-                <li><a href="#SobreMim">Sobre Mim</a></li>
-                <li><a href="#ComoTrabalho">Como Trabalho</a></li>
-                <li><a href="#Experiencia">Experiência</a></li>
-                <li><a href="#Contato">Contato</a></li>
-                <ul>
+                <li><a href="./index.html">Home</a></li>
         </nav>
     </aside>
-    <h1 id=tituloprincipal>Guilherme Dantas</h1>
-    <center><img src="./imagens/hire-html5-developer-get-free-quote_new2.png" float=center alt=""> </center>
+
     <main>
         <div>
             <h1 id=SobreMim>Sobre mim</h1>
@@ -48,17 +43,7 @@
                     target="blanck">Apple</a>, <a href="https://www.itau.com.br/" target="blanck">Itau</a> e
                 <a href="https://www.amazon.com.br/" target="blanck">Amazon</a>
             </p>
-            <center>
-                <h4 id=Contato>Contatos</h3>
-                    <a id="redessociais" target="blanck" href="https://www.twitter.com"><img src="imagens/60580.png"
-                            height="50px" width="50px"> </a>
-                    <a id="redessociais" target="blanck" href="https://www.linkedin.com"><img src="imagens/61109.png"
-                            height="50px" width="50px"> </a>
-                    <a id="redessociais" target="blanck" href="https://www.facebook.com"><img
-                            src="imagens/facebookicon.png" height="50px" width="50px"> </a>
-                    <a id="redessociais" target="blanck" href="mailto:guilherme.dantas@ifsp.edu.br"><img
-                            src="imagens/emailicon.png " height="50px" width="50px"></a>
-            </center>
+            
         </div>
     </main>
     <footer>
