--- a/Meu Site/bio.html
+++ b/Meu Site/bio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>
+<head class="mainHeader">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -9,47 +9,78 @@
     <link rel="icon" href="./imagens/biography-icon-18.jpg(1).png">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/bio.css">
+    <h1 id=tituloprincipal>Guilherme Dantas</h1>
 </head>
 
-<body>
-    <aside>
-        <nav id="menu">
-            <ul id="menu2">
-                <li><a href="./index.html">Home</a></li>
-        </nav>
-    </aside>
-
-    <main>
+<body class="grid-container">
+    <main class="content">
+        <center><img src="./imagens/imgprincipalhtml.png" float=center alt=""> </center>
         <div>
             <h1 id=SobreMim>Sobre mim</h1>
 
-            <p>Estudante de Análise e desenvolvimento de sistemas no Instituto Federal de Educação, Ciência e Tecnologia de 
+            <p>Estudante de Análise e desenvolvimento de sistemas no Instituto Federal de Educação, Ciência e Tecnologia
+                de
                 São Paulo.
                 <br>Formação técnica em Administração de empresas.
                 <br>Atualmente com 19 anos.
                 <br>Nascido e residente em Osasco, São Paulo.
-            <h2 id=ComoTrabalho>Como trabalho</h2>
-            <blockquote>Para ser bem sucedido no trabalho, a primeira coisa a fazer é apaixonar-se por ele.
-                <br> <cite> Mary Lauretta.</cite>
-            </blockquote>
-            <p><em>Respeito com prazos</em>, Você <strong>nunca</strong> vai ficar na mão.<br>
-                Utilizo as últimas e mais <em>modernas</em> tecnologias para criar seu site ou desenvolver seu
-                software.<br>
-                Desenvolvimento com <em>qualidade</em>.<br>
+                <h2 id=ComoTrabalho>Como trabalho</h2>
+                <blockquote>Para ser bem sucedido no trabalho, a primeira coisa a fazer é apaixonar-se por ele.
+                    <br> <cite> Mary Lauretta.</cite>
+                </blockquote>
+                <p><em>Respeito com prazos</em>, Você <strong>nunca</strong> vai ficar na mão.<br>
+                    Utilizo as últimas e mais <em>modernas</em> tecnologias para criar seu site ou desenvolver seu
+                    software.<br>
+                    Desenvolvimento com <em>qualidade</em>.<br>
 
-            </p>
-            <h3 id=Experiencia>Experiência</h3>
-            <p>Alguns projetos de sites já desenvolvidos em grandes empresas como, <a href="https://www.apple.com/"
-                    target="blanck">Apple</a>, <a href="https://www.itau.com.br/" target="blanck">Itau</a> e
-                <a href="https://www.amazon.com.br/" target="blanck">Amazon</a>
-            </p>
-            
+                </p>
+                <h3 id=Experiencia>Experiência</h3>
+                <p>Alguns projetos de sites já desenvolvidos em grandes empresas como, <a href="https://www.apple.com/"
+                        target="blanck">Apple</a>, <a href="https://www.itau.com.br/" target="blanck">Itau</a> e
+                    <a href="https://www.amazon.com.br/" target="blanck">Amazon</a>
+                </p>
         </div>
     </main>
-    <footer>
+    <aside>
+        <nav id="menu">
+            <ul>
+                <li>
+                    <a href="./index.html">Home</a>
+                </li>
+                <li>
+                    <a href="./portfolio.html">Portfólio</a>
+                </li>
+                <li>
+                    <a href="./bio.html">Sobre Mim</a>
+                </li>
+                <li>
+                    <a href="./blog.html">Blog</a>
+                </li>
+                <li>
+                    <a href="./contato.html">Contato</a>
+                </li>
+            </ul>
+
+            <ul class="icones-sociais">
+                <li>
+                    <a class="twitter" target="blanck" href="https://www.twitter.com"> Twitter </a></li>
+                <li>
+                    <a class="linkedin" target="blanck" href="https://www.linkedin.com"> Likedin</a></li>
+                <li>
+                    <a class="facebook" target="blanck" href="https://www.facebook.com"> Facebook</a></li>
+                <li>
+                    <a class="e-mail" target="blanck" href="mailto:guilherme.dantas@ifsp.edu.br"> E-mail</a>
+                </li>
+                <li>
+                    <a class="github" target="blanck" href="https://github.com/Guids26/"> GitHub</a></li>
+            </ul>
+        </nav>
+    </aside>
+
+    <footer">
         <br><br>
         <center> &copy; Guilherme 2019</center>
-    </footer>
+        </footer>
 </body>
 
 </html>
