--- a/Meu Site/bio.html
+++ b/Meu Site/bio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head class="mainHeader">
+<head class="header">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -9,10 +9,13 @@
     <link rel="icon" href="./imagens/biography-icon-18.jpg(1).png">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/bio.css">
-    <h1 id=tituloprincipal>Guilherme Dantas</h1>
+    
 </head>
 
 <body class="grid-container">
+    <div class="header">
+        <h1 id=tituloprincipal>Guilherme Dantas</h1>
+    </div>
     <main class="content">
         <center><img src="./imagens/imgprincipalhtml.png" float=center alt=""> </center>
         <div>
@@ -40,9 +43,10 @@
                     <a href="https://www.amazon.com.br/" target="blanck">Amazon</a>
                 </p>
         </div>
+        </body>
     </main>
     <aside>
-        <nav id="menu">
+        <nav class="menu">
             <ul>
                 <li>
                     <a href="./index.html">Home</a>
@@ -77,10 +81,10 @@
         </nav>
     </aside>
 
-    <footer">
+    <footer>
         <br><br>
         <center> &copy; Guilherme 2019</center>
         </footer>
-</body>
+
 
 </html>
