--- a/Meu Site/bio.html
+++ b/Meu Site/bio.html
@@ -6,45 +6,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Biografia - Guilherme Dantas</title>
-    <link rel="icon" href="./imagens/biography-icon-18.jpg(1).png">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/bio.css">
-    
+    <link rel="icon" href="./imagens/biography-icon-18.jpg(1).png">
 </head>
 
+
+
 <body class="grid-container">
-    <div class="header">
-        <h1 id=tituloprincipal>Guilherme Dantas</h1>
-    </div>
+    <header class="cabecalho">
+        <h1>Guilherme Dantas</h1>
+    </header>
+
     <main class="content">
-        <center><img src="./imagens/imgprincipalhtml.png" float=center alt=""> </center>
-        <div>
-            <h1 id=SobreMim>Sobre mim</h1>
+        <center><img src="./imagens/imgprincipal2.png" height="30%" width="30%" alt=""></center>
+        <h1 id=SobreMim>Sobre mim</h1>
+        <p>Estudante de Análise e desenvolvimento de sistemas no Instituto Federal de Educação, Ciência e Tecnologia
+            de
+            São Paulo.
+            <br>Formação técnica em Administração de empresas.
+            <br>Atualmente com 19 anos.
+            <br>Nascido e residente em Osasco, São Paulo.
+            <h1 id=ComoTrabalho>Como trabalho</h1>
+            <blockquote>Para ser bem sucedido no trabalho, a primeira coisa a fazer é apaixonar-se por ele.
+                <br> <cite> Mary Lauretta.</cite>
+            </blockquote>
+            <p><em>Respeito com prazos</em>, Você <strong>nunca</strong> vai ficar na mão.<br>
+                Utilizo as últimas e mais <em>modernas</em> tecnologias para criar seu site ou desenvolver seu
+                software.<br>
+                Desenvolvimento com <em>qualidade</em>.<br>
 
-            <p>Estudante de Análise e desenvolvimento de sistemas no Instituto Federal de Educação, Ciência e Tecnologia
-                de
-                São Paulo.
-                <br>Formação técnica em Administração de empresas.
-                <br>Atualmente com 19 anos.
-                <br>Nascido e residente em Osasco, São Paulo.
-                <h2 id=ComoTrabalho>Como trabalho</h2>
-                <blockquote>Para ser bem sucedido no trabalho, a primeira coisa a fazer é apaixonar-se por ele.
-                    <br> <cite> Mary Lauretta.</cite>
-                </blockquote>
-                <p><em>Respeito com prazos</em>, Você <strong>nunca</strong> vai ficar na mão.<br>
-                    Utilizo as últimas e mais <em>modernas</em> tecnologias para criar seu site ou desenvolver seu
-                    software.<br>
-                    Desenvolvimento com <em>qualidade</em>.<br>
-
-                </p>
-                <h3 id=Experiencia>Experiência</h3>
-                <p>Alguns projetos de sites já desenvolvidos em grandes empresas como, <a href="https://www.apple.com/"
-                        target="blanck">Apple</a>, <a href="https://www.itau.com.br/" target="blanck">Itau</a> e
-                    <a href="https://www.amazon.com.br/" target="blanck">Amazon</a>
-                </p>
-        </div>
-        </body>
+            </p>
+            <h1 id=Experiencia>Experiência</h1>
+            <p>Alguns projetos de sites já desenvolvidos em grandes empresas como, <a href="https://www.apple.com/"
+                    target="blanck">Apple</a>, <a href="https://www.itau.com.br/" target="blanck">Itau</a> e
+                <a href="https://www.amazon.com.br/" target="blanck">Amazon</a>
+            </p>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Conhecimento</th>
+                        <th>Nível</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Java</td>
+                        <td>Intermediário</td>
+                    </tr>
+                    <tr>
+                        <td>C</td>
+                        <td>Intermediário</td>
+                    </tr>
+                    <tr>
+                        <td>HTML</td>
+                        <td>Básico</td>
+                    </tr>
+                    <tr>
+                        <td>CSS</td>
+                        <td>Básico</td>
+                    </tr>
+                </tbody>
+            </table>
     </main>
+
     <aside>
         <nav class="menu">
             <ul>
@@ -66,25 +91,22 @@
             </ul>
 
             <ul class="icones-sociais">
-                <li>
-                    <a class="twitter" target="blanck" href="https://www.twitter.com"> Twitter </a></li>
-                <li>
-                    <a class="linkedin" target="blanck" href="https://www.linkedin.com"> Likedin</a></li>
-                <li>
-                    <a class="facebook" target="blanck" href="https://www.facebook.com"> Facebook</a></li>
-                <li>
-                    <a class="e-mail" target="blanck" href="mailto:guilherme.dantas@ifsp.edu.br"> E-mail</a>
-                </li>
-                <li>
-                    <a class="github" target="blanck" href="https://github.com/Guids26/"> GitHub</a></li>
+                <center>
+                    <li>
+                        <a class="linkedin" target="blanck" href="https://www.linkedin.com"> Likedin</a></li>
+                    <li>
+                        <a class="e-mail" target="blanck" href="mailto:guilherme.dantas@ifsp.edu.br"> E-mail</a>
+                    <li>
+                        <a class="github" target="blanck" href="https://github.com/Guids26/"> GitHub</a>
+                    </li>
+                </center>
             </ul>
         </nav>
     </aside>
 
-    <footer>
-        <br><br>
-        <center> &copy; Guilherme 2019</center>
-        </footer>
-
+    <footer class="rodape">
+        <center>&copy; Guilherme 2019</center>
+    </footer>
+</body>
 
 </html>
